--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Node Express Application</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!--Header-->
@@ -17,5 +24,55 @@
         </div>
       </nav>
     </header>
+
+    <!--main section-->
+    <main id="site-main">
+      <div class="container">
+        <div class="box-nav d-flex-justify-content">
+          <a href="/add-user" class="border-shadow">
+            <span class="text-gradient">
+              New User <i class="fa fa-user" aria-hidden="true"></i>
+            </span>
+          </a>
+        </div>
+        <!--form handling-->
+        <form action="/" method="post">
+          <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>email</th>
+                <th>Gender</th>
+                <th>Status</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Username</td>
+                <td>example@gmail.com</td>
+                <td>Male</td>
+                <td>Active</td>
+                <td>
+                  <a href="#" class="btn border-shadow update">
+                    <span class="text-gradient">
+                      <i class="fas fa-pencil-alt"> </i>
+                    </span>
+                  </a>
+                  <a class="btn border-shadow delete">
+                    <span class="text-gradient">
+                      <i class="fas fa-times"> </i>
+                    </span>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </form>
+      </div>
+    </main>
+    <!--/main section-->
   </body>
 </html>
