--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
   <body>
     <!--Header-->
@@ -28,7 +29,7 @@
     <!--main section-->
     <main id="site-main">
       <div class="container">
-        <div class="box-nav d-flex-justify-content">
+        <div class="box-nav d-flex justify-content">
           <a href="/add-user" class="border-shadow">
             <span class="text-gradient">
               New User <i class="fa fa-user" aria-hidden="true"></i>
