--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,38 @@
 <%-include('include/_header')-%>
 <!--/include header-->
 
+<!--main section-->
+<main id="site-main">
+  <div class="container">
+    <div class="box-nav d-flex justify-content">
+      <a href="/add-user" class="border-shadow">
+        <span class="text-gradient">
+          New User <i class="fa fa-user" aria-hidden="true"></i>
+        </span>
+      </a>
+    </div>
+    <!--form handling-->
+    <form action="/" method="post">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>email</th>
+            <th>Gender</th>
+            <th>Status</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <%-include('include/show') %>
+        </tbody>
+      </table>
+    </form>
+  </div>
+</main>
+<!--/main section-->
+
 <!--include footer-->
 <%-include('include/_footer')-%>
 <!--/include footer-->
